Drop Apache Commons and Log4J Over Slf4J dependencies